[package]
authors = ["Pavel Ivanov <mr.pavel.ivanov@gmail.com>"]
categories = ["command-line-utilities"]
description = "Utility for viewing json-formatted log files."
keywords = ["cli", "human", "log"]
name = "hl"
version = "0.9.0-alpha.0"
edition = "2018"
build = "build.rs"

[build-dependencies]
capnpc = "0.13"

[dependencies]
ansi_term = "0"
anyhow = "1"
atoi = "0"
bincode = "1.3"
bitmask = "0"
bytefmt = "0"
capnp = "0.13"
chrono = { version = "0", features = ["serde"] }
chrono-tz = "0"
closure = "0"
crossbeam-channel = "0"
crossbeam-queue = "0"
crossbeam-utils = "0"
directories = "3.0.1"
error-chain = "0"
flate2 = "1"
generic-array = "0.14"
heapless = "0"
hex = "0.4"
atty = "0"
itertools = "0"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
sha2 = "0.9"
shellwords = "1"
signal-hook = "0"
structopt = "0"
thiserror = "1"

[dependencies.itoa]
version = "0"
default-features = false

[dev-dependencies]
criterion = "0"
diligent-date-parser = "0"
regex = "1"

[profile.release]
debug = false
opt-level = 3
codegen-units = 1
lto = true

[[bench]]
name = "ts_parse"
harness = false

[[bench]]
name = "ts_format"
harness = false